--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 PORT = 5000
-URI = mongodb+srv://keosophon:Abcdefg123$@cluster0.e1kuack.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+URI = mongodb+srv://keosophon:Abcdefg123$@cluster0.e1kuack.mongodb.net/ems
 JWT_SECRET = "kldsfaklfdklajdf;lkasjdf;lasfkji882r9ut9itw9urw9rt@#$Q@#$@$%@^#%$^#$%ADFSAFASFDF"
